--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       .container {
         margin-top:50px;
         display:grid;
-        grid-template-columns: 1fr 1fr
+        grid-template-columns: 1fr 1fr 1fr;
       }
 
       .sleigh {
